--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,24 @@
     <groupId>ru.stqa</groupId>
     <artifactId>java-example</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <application.selenium.driver>CHROME</application.selenium.driver>
+    </properties>
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <buildDirectory>${project.build.directory}</buildDirectory>
+                        <webdriver.name>${application.selenium.driver}</webdriver.name>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -20,6 +36,27 @@
         </plugins>
     </build>
 
+
+    <profiles>
+        <profile>
+            <id>run-tests-in-firefox</id>
+            <properties>
+                <application.selenium.driver>FIREFOX</application.selenium.driver>
+            </properties>
+        </profile>
+        <profile>
+            <id>run-tests-in-IE11</id>
+            <properties>
+                <application.selenium.driver>IEXPLORER</application.selenium.driver>
+            </properties>
+        </profile>
+        <profile>
+            <id>run-tests-in-chrome</id>
+            <properties>
+                <application.selenium.driver>CHROME</application.selenium.driver>
+            </properties>
+        </profile>
+    </profiles>
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -38,9 +75,9 @@
             <scope>test</scope>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-api</artifactId>-->
-            <!--<version>1.7.26</version>-->
+        <!--<groupId>org.slf4j</groupId>-->
+        <!--<artifactId>slf4j-api</artifactId>-->
+        <!--<version>1.7.26</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
